# WSPR-Reference

./: .gitignore  CMakeLists.txt  Callsign Ambiguity.md  README.md
.github/workflows/: ci.yml
build-install-test/: api_example  correlator_smoke  fano_bounded_decode  fano_branch_ordering  fano_compare_24  fano_compare_short  fano_full_payload_roundtrip  fano_limited_decode  fano_payload_roundtrip  fano_sanity  install_manifest.txt  payload_compare_roundtrip  unpack_type1_roundtrip  unpack_type2_ambiguity  unpack_type2_matrix  unpack_type2_overlap_observation  unpack_type2_roundtrip  unpack_type2_smoke  unpack_type3_roundtrip  unpack_type3_smoke  verify_vectors  wspr-correlate  wspr-decode  wspr-encode  wspr_refConfig.cmake
cmake/: wspr_refConfig.cmake.in
examples/: api_example.cpp
examples/consumer/: CMakeLists.txt  main.cpp
install/include/wspr/: wspr_ref_correlator.hpp  wspr_ref_encoder.hpp  wspr_ref_fano.hpp
install/lib/cmake/wspr_ref/: wspr_refTargets-noconfig.cmake  wspr_refTargets.cmake
src/: correlate_main.cpp  decode_main.cpp  encode_main.cpp  main.cpp
src/wspr/: wspr_constants.hpp  wspr_ref_api.cpp  wspr_ref_api.hpp  wspr_ref_correlator.cpp  wspr_ref_correlator.hpp  wspr_ref_decoder.cpp  wspr_ref_decoder.hpp  wspr_ref_encode_internal.hpp  wspr_ref_encoder.cpp  wspr_ref_encoder.hpp  wspr_ref_fano.cpp  wspr_ref_fano.hpp  wspr_ref_plan.cpp  wspr_ref_plan.hpp  wspr_ref_unpack.cpp  wspr_ref_unpack.hpp
test_vectors/: README.md  wspr_golden_vectors.json
tests/: callsign_locator_matrix.cpp  correlator_smoke.cpp  encode_paired_smoke.cpp  fano_bounded_decode.cpp  fano_branch_ordering.cpp  fano_compare_24.cpp  fano_compare_short.cpp  fano_full_payload_roundtrip.cpp  fano_limited_decode.cpp  fano_payload_roundtrip.cpp  fano_sanity.cpp  payload_compare_roundtrip.cpp  plan_transmission_smoke.cpp  run_major_regressions.sh  type2_decode_pipeline.cpp  type2_type3_paired_expected_behavior.cpp  unpack_type1_roundtrip.cpp  unpack_type2_ambiguity.cpp  unpack_type2_matrix.cpp  unpack_type2_overlap_observation.cpp  unpack_type2_roundtrip.cpp  unpack_type2_smoke.cpp  unpack_type3_roundtrip.cpp  unpack_type3_smoke.cpp  verify_vectors.cpp
